[gd_scene load_steps=3 format=3 uid="uid://hrfru6kv8wqv"]

[ext_resource type="Script" path="res://Scripts/UI/chat.gd" id="1_h7g4t"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qutse"]
properties/0/path = NodePath("ChatContainer/ChatBox:text")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h7g4t")

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatBox" type="TextEdit" parent="ChatContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "CAMBIAR ESTE COSO POR UN SCROLL CONTAINER Y QUE CADA MENSAJE SEA UN LINEEDIT NUEVO"
editable = false
wrap_mode = 1
scroll_smooth = true

[node name="MessageContainer" type="HBoxContainer" parent="ChatContainer"]
layout_mode = 2

[node name="TextBox" type="LineEdit" parent="ChatContainer/MessageContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="ChatContainer/MessageContainer"]
layout_mode = 2
text = "Enviar"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qutse")

[connection signal="focus_entered" from="ChatContainer/MessageContainer/TextBox" to="." method="_on_text_box_focus_entered"]
[connection signal="focus_exited" from="ChatContainer/MessageContainer/TextBox" to="." method="_on_text_box_focus_exited"]
[connection signal="pressed" from="ChatContainer/MessageContainer/SendButton" to="." method="_on_button_pressed"]
